Add link icon for the website.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>IA Cooked</title>
+  <link rel="icon" type="image/png" href="/public/cooker.png">
   <style>
     body {
       margin: 0;
