Restructure the folder
In order to follow vite structure. otherwise I couldn't load image.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>IA Cooked</title>
-  <link rel="icon" type="image/png" href="/public/cooker.png">
+  <link rel="icon" type="image/png" href="/assets/cooker.png">
   <style>
     body {
       margin: 0;
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="src/main.js"></script>
 </body>
 
 </html>
