Add qq QR code in the website
Welcome to our IA QQ group~112471442

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>IA Cooked</title>
+  <title>IA Cooked!</title>
   <link rel="icon" type="image/png" href="/assets/cooker.png">
   <style>
     body {
